# octelium

./: .gitignore  Makefile  README.md  SECURITY.md  go.work  go.work.sum
.github/workflows/: cleanup-untagged-images.yaml  client-components.yaml  client-install.yaml  cluster-components-arm64.yaml  cluster-components-arm64.yaml.old  cluster-components.yaml  cluster-install.yaml  demo-cluster-install.yaml  e2e.yaml  env  release.yaml  sync.yaml  test-unit.yaml
apis/: go.mod  go.sum
client/common/: go.mod  go.sum
client/octelium/: Dockerfile  go.mod  go.sum  main.go
client/octeliumctl/: Dockerfile  go.mod  go.sum  main.go
client/octops/: Dockerfile  go.mod  go.sum  main.go
cluster/apiserver/: Dockerfile  go.mod  go.sum  main.go
cluster/authserver/: Dockerfile  go.mod  go.sum  main.go
cluster/common/: go.mod  go.sum
cluster/dnsserver/: Dockerfile  go.mod  go.sum  main.go
cluster/e2e/: Dockerfile  go.mod  go.sum  main.go
cluster/genesis/: Dockerfile  go.mod  go.sum  main.go
cluster/gwagent/: Dockerfile  go.mod  go.sum  main.go
cluster/ingress/: Dockerfile  go.mod  go.sum  main.go
cluster/nocturne/: Dockerfile  go.mod  go.sum  main.go
cluster/nodeinit/: Dockerfile  go.mod  go.sum  main.go
cluster/octovigil/: Dockerfile  go.mod  go.sum  main.go
cluster/portal/: Dockerfile  go.mod  go.sum  main.go
cluster/rscserver/: Dockerfile  go.mod  go.sum  main.go
cluster/wrdpgw/wrdpgw/credssp-rs/: .gitignore  Cargo.toml
cluster/wrdpgw/wrdpgw/credssp-rs/src/: lib.rs
octelium-go/: go.mod  go.sum  octelium.go
pkg/: go.mod  go.sum
(+815 files in other folders)
